@@ -1,3 +1,9 @@
+2004-08-10  Mark Kettenis  <kettenis@gnu.org>
+
+	* procfs.c (procfs_detach): Cleanup.  Print process ID, not LWP
+	ID.  Use comma in output.  Use gdb_flush on gdb_stdout instead of
+	fflush on stdout.
+
 2004-08-10  Joel Brobecker  <brobecker@gnat.com>
 
 	* xcoff_symfile_finish: Replace last call to xmfree by call
